[package]
name = "mtg-proxy-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
printpdf = { version = "0.7.0", features = ["pdf-writer", "embedded_images", "jpeg_rayon"] }
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
